# kaggle_riiid

./: pyproject.toml  workflow.sh
features/: average_corrected_answers.py  base.py  content_average_corrected_answers.py  content_average_corrected_answers_posterior.py  content_number_of_answers.py  content_number_of_answers_after_second_time.py  count_appearances_per_user.py  cumulative_appearances_per_user.py  cumulative_user_interactions.py  cumulative_user_interactions_per_user.py  fold.py  label_encoding.py  numeric_features.py  target.py  user_answered_in_the_past.py  user_cumulative_question_elapsed_time.py  user_cumulative_user_interactions.py  user_cumulative_user_interactions_by_part.py  user_cumulative_user_interactions_by_part_weighted_window_size_100.py  user_cumulative_user_interactions_by_part_window_size_100.py  user_cumulative_user_interactions_weighted_window_size_100.py  user_cumulative_user_interactions_window_freq.py  user_last_solved_date.py  user_last_solved_problem.py  user_last_solved_problem_similarity.py  user_lectured_at_least_once.py  utils.py
model_gbdt_20201123/: run.py
model_gbdt_20201123/configs/: model_0.json  model_1.json  model_10.json  model_11.json  model_13.json  model_17.json  model_19.json  model_2.json  model_20.json  model_21.json  model_22.json  model_23.json  model_4.json  model_5.json  model_7.json  model_9.json
model_gbdt_20201123/data/output/model_0/: output.json
model_gbdt_20201123/src/: feature_loader.py  metrics.py  runner.py  utils.py
model_gbdt_20201123/src/models/: lightgbm.py  model.py
(+22 files in other folders)
